--- a/projeto-FrontEnd/pages/src/styles/header.css
+++ b/projeto-FrontEnd/pages/src/styles/header.css
@@ -1,7 +1,32 @@
 header {
+    width: 100%;
+    border-bottom: 2px solid var(--color-6);
+}
+.container {
+    width: 80%;
+
+    margin: 0 auto;
+    
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.entrepriseLogo {
+    display: flex;
+    gap: 15px;
+}
+
+.logo {
+    width: auto;
+    height: 60%;
+
+    align-self: center;
+
+    display: none;
+}
+/*header {
+
 
     width: 100%;
     height: 40px;
@@ -9,43 +34,41 @@ header {
     padding-left: 20px;
     padding-right: 20px;
 
-    border-bottom: 2px solid var(--color-6);
 }
-.entrepriseLogo {
-    display: flex;
-    gap:15px;
-}
-.logo {
-    width: auto;
-    height: 60%;
 
-    align-self: center;
-}
+
+
 h1 {
     font-size: medium;
 }
-.btn_menu{
+
+.btn_menu {
     background-color: transparent;
     border: transparent;
     display: block;
 }
-.btn_menu > i {
+
+.btn_menu>i {
     display: block;
     width: auto;
     height: 50%;
 }
-.hidden{
+
+.hidden {
     display: none;
-} 
+}
+
 .header--button {
     width: 85px;
     height: 40px;
     border-radius: 4px;
 }
+
 .login {
     border: solid 1px var(--color-1);
     color: var(--color-1);
 }
+
 .cadastro {
     background-color: var(--color-1);
     color: var(--color-2);
@@ -53,13 +76,15 @@ h1 {
 }
 
 @media(min-width: 798px) {
-    header{
+    header {
         justify-content: space-between;
     }
-    .btn_menu{
+
+    .btn_menu {
         display: none;
     }
-    .hidden{
+
+    .hidden {
         display: block;
-    } 
-}
+    }
+}*/
