--- a/projeto-FrontEnd/pages/src/styles/header.css
+++ b/projeto-FrontEnd/pages/src/styles/header.css
@@ -1,60 +1,34 @@
 header {
     width: 100%;
+    height: 100px;
+
     border-bottom: 2px solid var(--color-6);
 }
-.container {
-    width: 80%;
 
+.container {
     margin: 0 auto;
-    
+    width: 80%;
+    height: 100%;
+
     display: flex;
-    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
 }
 
-.entrepriseLogo {
-    display: flex;
-    gap: 15px;
-}
-
 .logo {
-    width: auto;
-    height: 60%;
-
-    align-self: center;
-
-    display: none;
-}
-/*header {
-
-
-    width: 100%;
-    height: 40px;
-
-    padding-left: 20px;
-    padding-right: 20px;
-
-}
-
-
-
-h1 {
-    font-size: medium;
+    width: 80%;
 }
 
 .btn_menu {
     background-color: transparent;
     border: transparent;
-    display: block;
 }
 
-.btn_menu>i {
-    display: block;
-    width: auto;
-    height: 50%;
+div.buttons {
+    display: flex;
+    gap: 10px;
 }
-
-.hidden {
+div.hidden {
     display: none;
 }
 
@@ -62,6 +36,7 @@ h1 {
     width: 85px;
     height: 40px;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 .login {
@@ -75,16 +50,21 @@ h1 {
     border: transparent;
 }
 
+
 @media(min-width: 798px) {
     header {
         justify-content: space-between;
+    }
+
+    .logo {
+        width: 40%;
     }
 
     .btn_menu {
         display: none;
     }
 
-    .hidden {
-        display: block;
+    div.hidden {
+        display: flex;
     }
-}*/
+}
